--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
+  font-weight: bold;
   border-bottom: 3px solid #149ddd;
 }
 
