--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,10 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 120px;
   border: 8px solid #2c2f3f;
+  image-orientation: from-image;
+
 }
+
 
 #header .profile h1 {
   font-size: 24px;
@@ -1074,5 +1077,9 @@ section {
     position: static;
     width: auto;
     padding-right: 20px 15px;
+  }
+
+img {
+      image-orientation: from-image;
   }
 }
