--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/bckg.jpg") top center;
+  background: url("../img/bckg.webp") top center;
   background-size: cover;
 }
 
@@ -1079,7 +1079,5 @@ section {
     padding-right: 20px 15px;
   }
 
-img {
-      image-orientation: from-image;
-  }
+
 }
